@@ -1,3 +1,8 @@
+2006-05-08  Sergei Gavrikov  <sg@belvok.com>
+
+	* src/lpc2xxx.misc (hal_hardware_init): Call HAL_PLF_HARDWARE_INIT
+	for any platform specific initialization.
+
 2006-02-14  Andy Jackson <andy@grapevinetech.co.uk>
 
 	* cdl/hal_arm_lpc2xxx.cdl: Added CYGHWR_HAL_ARM_LPC2XXX_FAMILY,
